--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <h1>Conway's Game of Life and Death</h1>
     <main></main>
+    <footer>
+      this is a poor implemetation by
+      <a href="https://thiagocolen.github.io/">thiagocolen.github.io</a>
+    </footer>
   </body>
 </html>
